Fix bad overflow when line of code is too long

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -316,6 +316,7 @@ code {
   border-radius: 4px; }
 pre > code {
   display: block;
+  overflow-x: auto;
   padding: 1rem 1.5rem;
   white-space: pre; }
 
